# hatethegame

./: .gitignore  README.md  pyproject.toml
examples/: autobook.py
htg/: __init__.py  book.py  condeco.py  settings.py
